fileadmin/AAC/aac.css
/* ... */
body {
	min-width: 960px;
	background: url(background.png) repeat-x;
	font-family: "Trebuchet MS", Tahoma, Verdana, Helvetica, "Helvetica Neue", Arial, sans-serif;
	font-size: 15px;
	line-height: 126%;
	color: #474747;
}

h1, h2, h3 {
	color: #00247d;
	font-weight: normal;
	font-style: normal;
	padding-bottom: 0.357em;
}

h1 {
	font-size: 1.786em; /*=25px*/
}

h2 {
    font-size: 1.429em; /*=20px*/
    line-height: 0.9em;
    margin-top: 10px;
    margin-bottom: 10px;
}

h3 {
	font-size: 1.286em; /*=18px*/
    font-weight: normal;
    line-height: 18px;
    margin: 30px 0 10px 0;
}

h4, h5, h6 {
	font-size: 100%;
	font-weight: bold;
	color: #474747;
}

h4 {
	margin: 0.5em 0em;
}


p {
	font-size: 1em;
	margin-bottom: 1em;
}

ul, ol {
	padding-left: 3em;
	margin: 1em 0;
}

li {
	margin: 3px 0;
}

a:link, a:visited, a:link:active, a:link:hover {
	color: #263476;
	font-weight: bold;
	text-decoration: none;
}

a:active, a:hover {
	text-decoration: underline;
}

abbr, acronym {
	border: 0px none;
	cursor: help;
}

/*
Make elements invisible without really removing them,
so they remain available to screen readers. Make links inside those elements
visible when they're tabbed to.
*/
.invisible {
	position: absolute;
	left: -9999em;
	top: auto;
	width: 1px;
	height: 1px;
	overflow: hidden;
}

.invisible a:focus, .invisible a:active {
	display: block;
	position: absolute;
	left: 10000em;
	top: 1em;
	width: auto;
	height: auto;
	white-space: nowrap;
}


/* PAGE */
#page {
    position: relative;
    min-height: 700px;
	margin-bottom: -120px; /* compensate the height of #foot */
	padding-bottom: 120px;
}


/* HEAD */
#head {
	height: 140px;
	background: #eaecf4 url(header.png) no-repeat;
	text-indent: -9999em;
}

body.historyguide #head {
	background-image: url(header_history_guide.png);
}

body.literatureguide #head {
	background-image: url(header_literature_guide.png);
}

#head a {
	position: absolute;
	height: 100%;
	width: 100%;
}



/* FOOT */
#foot {
	height: 40px;
	margin-top: 40px;
	padding: 40px 0px 0px;
	position: relative;
	font-size: 86%;
	color: #8d95b5;
	background: #263476 url(footer.png) repeat-x top;
}

#foot p {
	display: block;
	width: 940px;
	margin: 0 auto;
	padding: 0 10px;
}

#foot a:link, #foot a:visited, #foot a:active {
	color: #d9dbe7;
	text-decoration: none;
}

#foot a:hover {
	text-decoration: underline;
}



/*	MENU */
#menu {
	position: relative;
	height: 85px;
	margin-bottom: 20px;
	font-size: 14px;
}

#menu ul {
	margin: 0;
	padding: 0;
}

#menu ul.mainmenu {
	padding-top: 18px;
	list-style-type: none;
}

.mainmenu li {
	display: inline;
	margin-right: 0.9em;
}

.mainmenu li.last {
	margin-right: 0;
}

.mainmenu li a {
	padding: 3px 5px;
	font-weight: bold;
}

.mainmenu a {
	font-weight: bold;
	text-decoration: none;
	color: #234f8f;
	border-style: solid;
	border-width: 1px 2px;
	border-color: #eaecf4 transparent #dadada;
	-webkit-border-radius: 7px;
	-moz-border-radius: 7px;
	border-radius: 7px;
}

* html .mainmenu a {
	border-width: 1px 0px;
}

.mainmenu a:link:hover, .mainmenu a:visited:hover {
	color: #234f8f;
	background: #fff;
	border-top: 1px solid #fff;
	border-bottom: 1px solid #dadada;
}

.mainmenu .currentParent > a {
	color: #445875;
	background: #d1d3df;
	border-top: 1px solid #eaecf4;
	border-bottom: 1px solid #c4c4c4;
}

.mainmenu .currentParent > a:hover, .mainmenu .current a:hover {
	color: #445875;
	background: #d1d3df;
	border-top: 1px solid #eaecf4;
	border-bottom: 1px solid #c4c4c4;
}

.mainmenu .current > a {
	color: #384b66;
	background: #d1d3df;
	border-top: 1px solid #eaecf4;
	border-bottom: 1px solid #c4c4c4;
	-webkit-border-radius: 7px;
	-moz-border-radius: 7px;
	border-radius: 7px 7px 7px 7px;
}

.mainmenu .current > a:hover {
	color: #384b66;
	background: #d1d3df;
	border-top: 1px solid #eaecf4;
	border-bottom: 1px solid #cecece;
}


#menu ul.submenu {
	position: absolute;
	top: 48px;
	left: 18px;
	right: 0;
	text-transform: none;
}

.submenu li {
	margin: 0;
}

.submenu li:after {
	margin: 0 0.7em 0 0.4em;
	content: '•';
}

.submenu li.last:after {
	margin: 0;
	content: '';
}

.submenu li.unlinkedParent {
	color: #474747;
}

.submenu li.unlinkedParent a:after {
	content: ':';
}

.submenu li.unlinkedParent ul a:after {
	content: '';
}

.submenu:before {
	display: block;
	height: 16px;
	width: 10px;
	position: absolute;
	top: -8px;
	left: -12px;
	border: solid #999;
	border-width: 0px 0px 1px 1px;
	content: ' ';
}

.submenu li a:link {
	font-weight: normal;
	color: #2759a2;
	border-top: 1px solid #fff;
	border: none;
}

.submenu a:link:hover, .submenu a:visited:hover {
	background: #fff;
	color: #273572;
	border-top: 1px solid #fff;
	border-bottom: 1px solid #dadada;
	-webkit-border-radius: 7px;
	-moz-border-radius: 7px;
	border-radius: 7px 7px 7px 7px;
}

#menu ul.subsubmenu {
	display: inline;
	margin-left: 0.3em;
}

#menu .subsubmenu li {
	margin: 0;
}

.subsubmenu li:after {
	content: '|';
	margin: 0 0.2em;
}

#menu .subsubmenu li.last:after {
	content: '';
}


a.languageSwitcher {
	position: absolute;
	top: 19px;
	right: 0px;
	font-weight: normal;
	text-decoration: none;
	font-size: 12px;
}

a.languageSwitcher:hover {
	text-decoration: underline;
	font-weight: normal;
}



/* MARGINS FOR TYPO3 EXTENSION ELEMENTS */
#pazpar2, .gokContainer, .tx-ezbrequest-pi1 {
	margin: 1em 10px;
}



/* OVERRIDE PAZPAR2 STYLING */
#pazpar2 {
	font-size: 14px;
	line-height: 18px;
}

#pazpar2 .pz2-searchField {
	background-color: #f1f3f6;
}

#pazpar2 .pz2-extended .pz2-searchField {
    height: 18px;
	width: 254px;
}

#pazpar2 .pz2-extended .pz2-submitButton {
    height: 24px;
}

#pazpar2 .pz2-extended .pz2-extendedLink {
	line-height: 24px;
}


#pazpar2 .pz2-prev, #pazpar2 .pz2-next {
	color: #aaa;
}

#pazpar2 a.pz2-prev, #pazpar2 a.pz2-next {
	color: #00247d;
}

#pazpar2 .pz2-currentPage {
	color: #000;
}

#pazpar2 #pz2-results {
	margin-right: 240px;
}

#pazpar2 #pz2-results ol.pz2-resultList li {
	margin-bottom: 10px;
	padding-right: 10px;
}
/* ... */

